[metadata]
name = nfoursid
version = 1.0.1
author = Steven van Gemert
author_email = steven@vangemert.dev
description = Implementation of N4SID, Kalman filtering and state-space models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spmvg/nfoursid
license = MIT
classifiers =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib >=3.3
    numpy >=1.19
    pandas >=1.1

[options.packages.find]
where = src